--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,13 +19,14 @@ dependencies = [
     'Pillow>=10.3.0',
     'pre-commit>=3.5.0',
     'psycopg2-binary>=2.9.9',
-    'pydotplus>=2.0.2',
+    "pydotplus>=2.0.2",
     'python-dotenv>=1.0.0',
     'python-magic-bin>=0.4.14; sys_platform == "win32"',
     'python-magic>=0.4.27; sys_platform == "linux"',
     'setuptools>=68.2.2',
     'uvicorn>=0.29.0',
     'whitenoise[brotli]>=6.6.0',
+    "graphviz>=0.20.3",
 ]
 requires-python = ">=3.10"
 license = { text = "MIT" }
