--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
 filelock==3.15.1
 flask==3.0.3
+graphviz==0.20.3
 gunicorn==22.0.0
 h11==0.14.0
 identify==2.5.36
